Add missing resource
Signed-off-by: Eno Compton <ecompton@pivotal.io>

--- a/pipelines/loggregator/capacity-planning.yml
+++ b/pipelines/loggregator/capacity-planning.yml
@@ -341,9 +341,9 @@ jobs:
   serial: true
   plan:
     - aggregate:
-      - get: loggregator-ci
       - get: vars-store
         resource: deployments-loggregator
+      - get: loggregator-capacity-planning-release
     - task: create-org-and-space
       file: loggregator-ci/tasks/create-org-and-space.yml
       params:
