Add other missing resource
Signed-off-by: Brady Love <blove@pivotal.io>

--- a/pipelines/loggregator/capacity-planning.yml
+++ b/pipelines/loggregator/capacity-planning.yml
@@ -341,6 +341,7 @@ jobs:
   serial: true
   plan:
     - aggregate:
+      - get: loggregator-ci
       - get: vars-store
         resource: deployments-loggregator
       - get: loggregator-capacity-planning-release
