--- a/pipelines/loggregator/capacity-planning.yml
+++ b/pipelines/loggregator/capacity-planning.yml
@@ -392,7 +392,7 @@ jobs:
             flags="$flags --client-id=$CLIENT_ID"
             flags="$flags --client-secret=$CLIENT_SECRET"
 
-            export GOPATH="loggregator-capacity-planning-release"
+            export GOPATH="$PWD/loggregator-capacity-planning-release"
             pushd loggregator-capacity-planning-release/src/code.cloudfoundry.org/log_emitter
               go build
 
