remove dependency on cf-release-cats
Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/pipelines/loggregator/loggregator.yml
+++ b/pipelines/loggregator/loggregator.yml
@@ -643,7 +643,7 @@ jobs:
     - get: develop
       resource: loggregator-develop
       trigger: true
-      passed: ["lats", "cf-release-cats"]
+      passed: ["lats", "cats"]
     - get: loggregator-ci
   - task: promote
     file: loggregator-ci/tasks/promote.yml
