loggregator create-final-release uses sha256
[#148172659]

Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/pipelines/loggregator/release.yml
+++ b/pipelines/loggregator/release.yml
@@ -242,7 +242,7 @@ jobs:
             EOF
 
               # create final release and commit artifcats
-              bosh -n create-release --final \
+              bosh -n create-release --sha2 --final \
                 --tarball ../github-release/release.tgz \
                 --version $new_version
               git add .
