Fix race condition in scalable syslog smoke tests
Signed-off-by: Andrew Poydence <apoydence@pivotal.io>

--- a/tasks/scalable-syslog-smoke-test-with-vars.yml
+++ b/tasks/scalable-syslog-smoke-test-with-vars.yml
@@ -33,13 +33,23 @@ run:
     export PATH=$GOPATH/bin:$PATH
 
     function teardown {
-      ./teardown.sh
+      set +e
       ./report.sh
+      exit_code=$?
+
+      ./teardown.sh
+
+      exit $exit_code
     }
 
     function restart {
-      ./restart.sh
+      set +e
       ./report.sh
+      exit_code=$?
+
+      ./restart.sh
+
+      exit $exit_code
     }
 
     if [ "$TEARDOWN" = "true" ]; then
