--- a/tasks/firehose-reliability-test.yml
+++ b/tasks/firehose-reliability-test.yml
@@ -5,5 +5,6 @@ image_resource:
   - repository: loggregator/base
 inputs:
 - name: loggregator
+- name: loggregator-ci
 run:
   path: loggregator-ci/tasks/scripts/firehose-reliability-test.py
