add disable ci skip for scalable syslog release
Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/pipelines/lakitu/loggregator-prod.yml
+++ b/pipelines/lakitu/loggregator-prod.yml
@@ -11,6 +11,7 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/scalable-syslog-release
+    disable_ci_skip: true
 - name: loggregator
   type: git
   source:
