Fix name of deploy task
Signed-off-by: Wesley Jeanette <wjeanette@pivotal.io>

--- a/pipelines/lakitu/loggregator-prod.yml
+++ b/pipelines/lakitu/loggregator-prod.yml
@@ -146,7 +146,7 @@ jobs:
         params:
           submodules: none
       - get: secrets-prod
-    - task: diff
+    - task: deploy
       tags: [ prod ]
       config:
         platform: linux
