Fix path to schedule turbulence task and quote params
[#149093601]

Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/tasks/science/schedule-turbulence.yml
+++ b/tasks/science/schedule-turbulence.yml
@@ -8,9 +8,9 @@ inputs:
 params:
   VARS_FILE_PATH:
   TURBULENCE_API_URL:
-  TURBULENCE_NETWORK_TIMEOUT: 60m
-  TURBULENCE_NETWORK_DELAY:  10ms
-  TURBULENCE_NETWORK_LOSS: 5%
-  TURBULENCE_NETWORK_SCHEDULE: @daily
+  TURBULENCE_NETWORK_TIMEOUT: "60m"
+  TURBULENCE_NETWORK_DELAY: "10ms"
+  TURBULENCE_NETWORK_LOSS: "5%"
+  TURBULENCE_NETWORK_SCHEDULE: "@daily"
 run:
   path: loggregator-ci/tasks/science/schedule-turbulence.rb
