Add loggregator-ci as input to schedule turbulence task
[#149093601]

Signed-off-by: Brady Love <blove@pivotal.io>

--- a/pipelines/loggregator/science.yml
+++ b/pipelines/loggregator/science.yml
@@ -480,7 +480,7 @@ jobs:
           rebase: true
       on_failure: *slack-failure-alert
 
-- name: cf-setup
+- name: setup
   serial: true
   serial_groups: ["loggregator-elect", "loggregator-latest"]
   plan:
