--- a/tasks/science/schedule-turbulence.yml
+++ b/tasks/science/schedule-turbulence.yml
@@ -2,7 +2,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-  - repository: loggregator/base
+    repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
 inputs:
 - name: loggregator-ci
 - name: vars-store
