--- a/pipelines/loggregator/science.yml
+++ b/pipelines/loggregator/science.yml
@@ -1,3 +1,23 @@
+groups:
+- name: main
+  jobs:
+  - start-pipeline
+  - loggregator-latest-deploy
+  - loggregator-elect-deploy
+  - setup
+  - setup-datadog
+  - smoke-tests
+- name: director-lifecycle
+  jobs:
+  - loggregator-latest-bbl-create
+  - loggregator-latest-bbl-destroy
+  - loggregator-elect-bbl-create
+  - loggregator-elect-bbl-destroy
+  - loggregator-latest-v2-bbl-create
+  - loggregator-latest-v2-bbl-destroy
+  - loggregator-elect-v2-bbl-create
+  - loggregator-elect-v2-bbl-destroy
+
 resource_types:
   - name: slack-notification
     type: docker-image
@@ -133,7 +153,7 @@ jobs:
       BBL_GCP_PROJECT_ID: cff-loggregator
       BBL_GCP_ZONE: us-central1-a
       BBL_GCP_REGION: us-central1
-      BBL_STATE_DIR: gcp/loggregator-elect-bbl
+      BBL_STATE_DIR: gcp/science/loggregator-elect
       BBL_IAAS: gcp
       BBL_LB_CERT: {{coconut_director_cert}}
       BBL_LB_KEY: {{coconut_director_key}}
@@ -153,11 +173,12 @@ jobs:
   - task: bbl-destroy
     file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
     params:
-      BBL_STATE_DIR: gcp/loggregator-elect-bbl
+      BBL_STATE_DIR: gcp/science/loggregator-elect
   - put: deployments-loggregator-with-changes
     params:
       repository: updated-bbl-state
       rebase: true
+
 - name: loggregator-latest-bbl-create
   plan:
   - get: cf-deployment-concourse-tasks
@@ -172,7 +193,7 @@ jobs:
       BBL_GCP_PROJECT_ID: cff-loggregator
       BBL_GCP_ZONE: us-central1-a
       BBL_GCP_REGION: us-central1
-      BBL_STATE_DIR: gcp/loggregator-latest-bbl
+      BBL_STATE_DIR: gcp/science/loggregator-latest
       BBL_IAAS: gcp
       BBL_LB_CERT: {{coconut_director_cert}}
       BBL_LB_KEY: {{coconut_director_key}}
@@ -192,7 +213,87 @@ jobs:
   - task: bbl-destroy
     file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
     params:
-      BBL_STATE_DIR: gcp/loggregator-latest-bbl
+      BBL_STATE_DIR: gcp/science/loggregator-latest
+  - put: deployments-loggregator-with-changes
+    params:
+      repository: updated-bbl-state
+      rebase: true
+
+- name: loggregator-elect-v2-bbl-create
+  plan:
+  - get: cf-deployment-concourse-tasks
+    trigger: false
+  - get: bbl-state
+    resource: deployments-loggregator
+    trigger: false
+  - task: bbl-up
+    file: cf-deployment-concourse-tasks/bbl-up/task.yml
+    params:
+      BBL_GCP_SERVICE_ACCOUNT_KEY: service-account.key.json
+      BBL_GCP_PROJECT_ID: cff-loggregator
+      BBL_GCP_ZONE: us-central1-a
+      BBL_GCP_REGION: us-central1
+      BBL_STATE_DIR: gcp/science/loggregator-elect-v2
+      BBL_IAAS: gcp
+      BBL_LB_CERT: {{coconut_director_cert}}
+      BBL_LB_KEY: {{coconut_director_key}}
+      BBL_ENV_NAME: loggregator-elect-v2-bbl
+      LB_DOMAIN: loggregator-elect-v2.cf-app.com
+  - put: deployments-loggregator-with-changes
+    params:
+      repository: updated-bbl-state
+      rebase: true
+- name: loggregator-elect-v2-bbl-destroy
+  plan:
+  - get: cf-deployment-concourse-tasks
+    trigger: false
+  - get: bbl-state
+    resource: deployments-loggregator
+    trigger: false
+  - task: bbl-destroy
+    file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
+    params:
+      BBL_STATE_DIR: gcp/science/loggregator-elect-v2
+  - put: deployments-loggregator-with-changes
+    params:
+      repository: updated-bbl-state
+      rebase: true
+
+- name: loggregator-latest-v2-bbl-create
+  plan:
+  - get: cf-deployment-concourse-tasks
+    trigger: false
+  - get: bbl-state
+    resource: deployments-loggregator
+    trigger: false
+  - task: bbl-up
+    file: cf-deployment-concourse-tasks/bbl-up/task.yml
+    params:
+      BBL_GCP_SERVICE_ACCOUNT_KEY: service-account.key.json
+      BBL_GCP_PROJECT_ID: cff-loggregator
+      BBL_GCP_ZONE: us-central1-a
+      BBL_GCP_REGION: us-central1
+      BBL_STATE_DIR: gcp/science/loggregator-latest-v2
+      BBL_IAAS: gcp
+      BBL_LB_CERT: {{coconut_director_cert}}
+      BBL_LB_KEY: {{coconut_director_key}}
+      BBL_ENV_NAME: loggregator-latest-v2-bbl
+      LB_DOMAIN: loggregator-latest-v2.cf-app.com
+  - put: deployments-loggregator-with-changes
+    params:
+      repository: updated-bbl-state
+      rebase: true
+- name: loggregator-latest-v2-bbl-destroy
+  plan:
+  - get: cf-deployment-concourse-tasks
+    trigger: false
+  - get: bbl-state
+    resource: deployments-loggregator
+    trigger: false
+  - task: bbl-destroy
+    file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
+    params:
+      BBL_STATE_DIR: gcp/science/loggregator-latest-v2
   - put: deployments-loggregator-with-changes
     params:
       repository: updated-bbl-state
@@ -232,7 +333,7 @@ jobs:
       - task: upload-stemcell
         file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
         params:
-          BBL_STATE_DIR: gcp/loggregator-elect-bbl
+          BBL_STATE_DIR: gcp/science/loggregator-elect
       - task: copy-ops-files
         config:
           platform: linux
@@ -255,15 +356,15 @@ jobs:
               cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
               cp cf-deployment/operations/tcp-routing-gcp.yml ops-files/
               cp cf-deployment/operations/experimental/enable-rlp.yml ops-files/
-              cp bbl-state/gcp/loggregator-elect-bbl/ops-files/*.yml ops-files/
+              cp bbl-state/gcp/science/loggregator-elect/ops-files/*.yml ops-files/
 
       - task: cf-deploy
         file: cf-deployment-concourse-tasks/bosh-deploy-with-created-release/task.yml
         params:
-          BBL_STATE_DIR: gcp/loggregator-elect-bbl
+          BBL_STATE_DIR: gcp/science/loggregator-elect
           SYSTEM_DOMAIN: loggregator-elect.cf-app.com
-          VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
-          VARS_FILES: "gcp/loggregator-elect-bbl/datadog-vars.yml gcp/loggregator-elect-bbl/turbulence-vars.yml"
+          VARS_STORE_FILE: gcp/science/loggregator-elect/deployment-vars.yml
+          VARS_FILES: "gcp/science/loggregator-elect/datadog-vars.yml gcp/science/loggregator-elect/turbulence-vars.yml"
           OPS_FILES: "clients.yml use-4-azs-for-router.yml tcp-routing-gcp.yml enable-rlp.yml metron-health.yml turbulence-cf.yml"
       - task: deploy-scalable-syslog
         config:
@@ -287,7 +388,7 @@ jobs:
                 #!/bin/bash
                 set -eux
 
-                pushd updated-vars-store/gcp/loggregator-elect-bbl
+                pushd updated-vars-store/gcp/science/loggregator-elect
                   export BOSH_CLIENT=`bbl director-username`
                   export BOSH_CLIENT_SECRET=`bbl director-password`
                   export BOSH_CA_CERT=`bbl director-ca-cert`
@@ -304,7 +405,7 @@ jobs:
                 popd
 
                 ss_dir="$PWD/scalable-syslog-release-elect"
-                bbl_dir="updated-vars-store/gcp/loggregator-elect-bbl"
+                bbl_dir="updated-vars-store/gcp/science/loggregator-elect"
 
                 bosh -n -d scalablesyslog deploy \
                   --vars-store "$bbl_dir/scalablesyslog-vars.yml" \
@@ -362,7 +463,7 @@ jobs:
       - task: upload-stemcell
         file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
         params:
-          BBL_STATE_DIR: gcp/loggregator-latest-bbl
+          BBL_STATE_DIR: gcp/science/loggregator-latest
       - task: copy-ops-files
         config:
           platform: linux
@@ -386,7 +487,7 @@ jobs:
               cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
               cp cf-deployment/operations/tcp-routing-gcp.yml ops-files/
               cp cf-deployment/operations/experimental/enable-rlp.yml ops-files/
-              cp bbl-state/gcp/loggregator-latest-bbl/ops-files/*.yml ops-files/
+              cp bbl-state/gcp/science/loggregator-latest/ops-files/*.yml ops-files/
 
               version=$(cat release/version)
               sha=$(cat release/sha1)
@@ -403,10 +504,10 @@ jobs:
       - task: cf-deploy
         file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
         params:
-          BBL_STATE_DIR: gcp/loggregator-latest-bbl
+          BBL_STATE_DIR: gcp/science/loggregator-latest
           SYSTEM_DOMAIN: loggregator-latest.cf-app.com
-          VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
-          VARS_FILES: "gcp/loggregator-latest-bbl/datadog-vars.yml gcp/loggregator-latest-bbl/turbulence-vars.yml"
+          VARS_STORE_FILE: gcp/science/loggregator-latest/deployment-vars.yml
+          VARS_FILES: "gcp/science/loggregator-latest/datadog-vars.yml gcp/science/loggregator-latest/turbulence-vars.yml"
           OPS_FILES: "clients.yml use-4-azs-for-router.yml loggregator-version.yml tcp-routing-gcp.yml enable-rlp.yml metron-health.yml turbulence-cf.yml"
       - task: deploy-scalable-syslog
         config:
@@ -431,7 +532,7 @@ jobs:
                 #!/bin/bash
                 set -eux
 
-                pushd updated-vars-store/gcp/loggregator-latest-bbl
+                pushd updated-vars-store/gcp/science/loggregator-latest
                   export BOSH_CLIENT=`bbl director-username`
                   export BOSH_CLIENT_SECRET=`bbl director-password`
                   export BOSH_CA_CERT=`bbl director-ca-cert`
@@ -452,7 +553,7 @@ jobs:
                 popd
 
                 ss_dir="$PWD/scalable-syslog-develop"
-                bbl_dir="updated-vars-store/gcp/loggregator-latest-bbl"
+                bbl_dir="updated-vars-store/gcp/science/loggregator-latest"
 
                 bosh -n -d scalablesyslog deploy \
                   --vars-store "$bbl_dir/scalablesyslog-vars.yml" \
@@ -507,28 +608,26 @@ jobs:
           file: loggregator-ci/tasks/science/setup-cf.yml
           params:
             SYSTEM_DOMAIN: loggregator-elect.cf-app.com
-            VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
+            VARS_STORE_FILE: gcp/science/loggregator-elect/deployment-vars.yml
             ORG: cf-lamb
             SPACE: development
         - task: setup-loggregator-latest
           file: loggregator-ci/tasks/science/setup-cf.yml
           params:
             SYSTEM_DOMAIN: loggregator-latest.cf-app.com
-            VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
+            VARS_STORE_FILE: gcp/science/loggregator-latest/deployment-vars.yml
             ORG: cf-lamb
             SPACE: development
         - task: setup-turbulence-loggregator-elect
           file: loggregator-ci/tasks/science/schedule-turbulence.yml
           params:
             TURBULENCE_API_URL: https://104.198.199.110:6868
-            VARS_FILE_PATH: "gcp/loggregator-elect-bbl/deployment-vars.yml"
-            TURBULENCE_NETWORK_SCHEDULE: "@every 10m"
-            TURBULENCE_NETWORK_TIMEOUT: 10m
+            VARS_FILE_PATH: "gcp/science/loggregator-elect/deployment-vars.yml"
         - task: setup-turbulence-loggregator-latest
           file: loggregator-ci/tasks/science/schedule-turbulence.yml
           params:
             TURBULENCE_API_URL: https://130.211.157.150:6868
-            VARS_FILE_PATH: "gcp/loggregator-latest-bbl/deployment-vars.yml"
+            VARS_FILE_PATH: "gcp/science/loggregator-latest/deployment-vars.yml"
 
       timeout: 5m
       on_failure: *slack-failure-alert
@@ -622,7 +721,7 @@ jobs:
             USERNAME: admin
             DATADOG_API_KEY: {{datadog-dev-api-key}}
             SKIP_SSL_VALIDATION: true
-            VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
+            VARS_STORE_FILE: gcp/science/loggregator-elect/deployment-vars.yml
             VERSION_TAG: elect
       - task: http-drain
         file: loggregator-ci/tasks/scalable-syslog-smoke-test-with-vars.yml
@@ -637,7 +736,7 @@ jobs:
           DRAIN_TYPE: "https"
           JOB_NAME: "https-teardown"
           TEARDOWN: false
-          VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
+          VARS_STORE_FILE: gcp/science/loggregator-elect/deployment-vars.yml
         timeout: 15m
       - task: tcp-drain
         file: loggregator-ci/tasks/scalable-syslog-smoke-test-with-vars.yml
@@ -651,7 +750,7 @@ jobs:
           DRAIN_VERSION: "2.0"
           DRAIN_TYPE: "syslog"
           JOB_NAME: "syslog-teardown"
-          VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
+          VARS_STORE_FILE: gcp/science/loggregator-elect/deployment-vars.yml
         timeout: 15m
       - do:
         - task: get-release-version
@@ -688,7 +787,7 @@ jobs:
             USERNAME: admin
             DATADOG_API_KEY: {{datadog-dev-api-key}}
             SKIP_SSL_VALIDATION: true
-            VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
+            VARS_STORE_FILE: gcp/science/loggregator-latest/deployment-vars.yml
             VERSION_TAG: latest
       - task: http-drain
         file: loggregator-ci/tasks/scalable-syslog-smoke-test-with-vars.yml
@@ -702,7 +801,7 @@ jobs:
           DRAIN_VERSION: "2.0"
           DRAIN_TYPE: "https"
           JOB_NAME: "https-teardown"
-          VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
+          VARS_STORE_FILE: gcp/science/loggregator-latest/deployment-vars.yml
         timeout: 15m
       - task: tcp-drain
         file: loggregator-ci/tasks/scalable-syslog-smoke-test-with-vars.yml
@@ -716,7 +815,7 @@ jobs:
           DRAIN_VERSION: "2.0"
           DRAIN_TYPE: "syslog"
           JOB_NAME: "syslog-teardown"
-          VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
+          VARS_STORE_FILE: gcp/science/loggregator-latest/deployment-vars.yml
         timeout: 15m
       timeout: 10m
       ensure:
