--- a/pipelines/loggregator/science.yml
+++ b/pipelines/loggregator/science.yml
@@ -1078,6 +1078,138 @@ jobs:
           JOB_NAME: "syslog-teardown"
           VARS_STORE_FILE: gcp/science/loggregator-latest/deployment-vars.yml
         timeout: 15m
+      - do:
+        - task: get-release-version
+          config:
+            platform: linux
+            image_resource:
+              type: docker-image
+              source:
+                repository: loggregator/base
+            inputs:
+              - name: release-elect
+            outputs:
+              - name: release-info
+            run:
+              path: bash
+              args:
+              - -c
+              - |
+                #/bin/bash
+                set -ex
+
+                cd release-elect
+                git rev-parse HEAD > ../release-info/version
+        - task: loggregator-elect
+          file: loggregator-ci/tasks/science/cf-logs-smoke-test.yml
+          params:
+            PREFIX: "regression."
+            CYCLES: 10000
+            DELAY: "2"
+            DELAY_UNIT: "us"
+            MESSAGE: "FIFTEEN-MINUTE"
+            APP_NAME: "floodspinner"
+            WAIT: 60
+            API_ENDPOINT: api.loggregator-elect-v2.cf-app.com
+            USERNAME: admin
+            DATADOG_API_KEY: {{datadog-dev-api-key}}
+            SKIP_SSL_VALIDATION: true
+            VARS_STORE_FILE: gcp/science/loggregator-elect-v2/deployment-vars.yml
+            VERSION_TAG: elect
+      - task: http-drain
+        file: loggregator-ci/tasks/scalable-syslog-smoke-test-with-vars.yml
+        params:
+          CF_ORG: cf-lamb
+          CF_SPACE: development
+          CF_APP_DOMAIN: loggregator-elect-v2.cf-app.com
+          CF_SYSTEM_DOMAIN: loggregator-elect-v2.cf-app.com
+          CF_USERNAME: admin
+          DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+          DRAIN_VERSION: "2.0"
+          DRAIN_TYPE: "https"
+          JOB_NAME: "https-teardown"
+          TEARDOWN: false
+          VARS_STORE_FILE: gcp/science/loggregator-elect-v2/deployment-vars.yml
+        timeout: 15m
+      - task: tcp-drain
+        file: loggregator-ci/tasks/scalable-syslog-smoke-test-with-vars.yml
+        params:
+          CF_ORG: cf-lamb
+          CF_SPACE: development
+          CF_APP_DOMAIN: tcp.loggregator-elect-v2.cf-app.com
+          CF_SYSTEM_DOMAIN: loggregator-elect-v2.cf-app.com
+          CF_USERNAME: admin
+          DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+          DRAIN_VERSION: "2.0"
+          DRAIN_TYPE: "syslog"
+          JOB_NAME: "syslog-teardown"
+          VARS_STORE_FILE: gcp/science/loggregator-elect-v2/deployment-vars.yml
+        timeout: 15m
+      - do:
+        - task: get-release-version
+          config:
+            platform: linux
+            image_resource:
+              type: docker-image
+              source:
+                repository: loggregator/base
+            inputs:
+              - name: release-latest
+            outputs:
+              - name: release-info
+            run:
+              path: bash
+              args:
+              - -c
+              - |
+                #/bin/bash
+                set -ex
+
+                cp release-latest/version release-info/version
+        - task: loggregator-latest
+          file: loggregator-ci/tasks/science/cf-logs-smoke-test.yml
+          params:
+            PREFIX: "regression."
+            CYCLES: 10000
+            DELAY: "2"
+            DELAY_UNIT: "us"
+            MESSAGE: "FIFTEEN-MINUTE"
+            APP_NAME: "floodspinner"
+            WAIT: 60
+            API_ENDPOINT: api.loggregator-latest-v2.cf-app.com
+            USERNAME: admin
+            DATADOG_API_KEY: {{datadog-dev-api-key}}
+            SKIP_SSL_VALIDATION: true
+            VARS_STORE_FILE: gcp/science/loggregator-latest-v2/deployment-vars.yml
+            VERSION_TAG: latest
+      - task: http-drain
+        file: loggregator-ci/tasks/scalable-syslog-smoke-test-with-vars.yml
+        params:
+          CF_ORG: cf-lamb
+          CF_SPACE: development
+          CF_APP_DOMAIN: loggregator-latest-v2.cf-app.com
+          CF_SYSTEM_DOMAIN: loggregator-latest-v2.cf-app.com
+          CF_USERNAME: admin
+          DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+          DRAIN_VERSION: "2.0"
+          DRAIN_TYPE: "https"
+          JOB_NAME: "https-teardown"
+          VARS_STORE_FILE: gcp/science/loggregator-latest-v2/deployment-vars.yml
+        timeout: 15m
+      - task: tcp-drain
+        file: loggregator-ci/tasks/scalable-syslog-smoke-test-with-vars.yml
+        params:
+          CF_ORG: cf-lamb
+          CF_SPACE: development
+          CF_APP_DOMAIN: tcp.loggregator-latest-v2.cf-app.com
+          CF_SYSTEM_DOMAIN: loggregator-latest-v2.cf-app.com
+          CF_USERNAME: admin
+          DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+          DRAIN_VERSION: "2.0"
+          DRAIN_TYPE: "syslog"
+          JOB_NAME: "syslog-teardown"
+          VARS_STORE_FILE: gcp/science/loggregator-latest-v2/deployment-vars.yml
+        timeout: 15m
       timeout: 10m
       ensure:
         put: pipeline-lock
