--- a/pipelines/loggregator/science.yml
+++ b/pipelines/loggregator/science.yml
@@ -1233,36 +1233,9 @@ jobs:
     - do:
       - task: get-cf-creds
         config:
-          platform: linux
-          inputs:
-            - name: vars-store
-          outputs:
-            - name: cf-credentials
-          image_resource:
-            type: docker-image
-            source:
-              repository: loggregator/base
-          params:
-            VARS_STORE_FILE: gcp/science/loggregator-latest/deployment-vars.yml
-          run:
-            path: ruby
-            args:
-              - -e
-              - |
-                #!/usr/bin/env ruby
-                def load_or_raise(name)
-                  value = ENV[name]
-                  if value.nil?
-                    raise MissingRequiredEnvironmentVariable.new(name)
-                  end
-                  value
-                end
-                vars_file_path = load_or_raise('VARS_STORE_FILE')
-                password = `bosh int vars-store/#{vars_file_path} --path=/cf_admin_password`.chomp
-
-                File.open('cf-credentials/password', 'w') do |f|
-                  f.write(password)
-                end
+        file: loggregator-ci/tasks/get-cf-admin-credentials.yml
+        params:
+          VARS_STORE_FILE: gcp/science/loggregator-latest/deployment-vars.yml
       - task: loggregator-latest
         file: loggregator-ci/tasks/science/firehose-reliability-test.yml
         params:
@@ -1270,24 +1243,31 @@ jobs:
           APP_NAME: "loggregator-firehose-reliability"
           CF_API: "api.loggregator-latest.cf-app.com"
           DATADOG_API_KEY: {{datadog-loggregator-api-key}}
-          ORG: system
-          SPACE: blackbox-testing
+          ORG: cf-lamb
+          SPACE: development
           USERNAME: admin
           CLIENT_ID: {{science-firehose-reliability-client-id}}
           CLIENT_SECRET: {{science-firehose-reliability-client-secret}}
           SKIP_CERT_VERIFY: true
-    # - task: loggregator-release-elect
-    #   file: loggregator-ci/tasks/firehose-reliability-test.yml
-    #   params:
-    #     APP_DOMAIN: "loggregator-firehose-reliability.loggregator-elect.cf-app.com"
-    #     APP_NAME: "loggregator-firehose-reliability"
-    #     CF_API: "api.loggregator-elect.cf-app.com"
-    #     DATADOG_API_KEY: {{datadog-loggregator-api-key}}
-    #     ORG: system
-    #     SPACE: blackbox-testing
-    #     USERNAME: admin
-    #     CLIENT_ID: {{science-firehose-reliability-client-id}}
-    #     CLIENT_SECRET: {{science-firehose-reliability-client-secret}}
+    - do:
+      - task: get-cf-creds
+        config:
+        file: loggregator-ci/tasks/get-cf-admin-credentials.yml
+        params:
+          VARS_STORE_FILE: gcp/science/loggregator-elect/deployment-vars.yml
+      - task: loggregator-elect
+        file: loggregator-ci/tasks/science/firehose-reliability-test.yml
+        params:
+          APP_DOMAIN: "loggregator-firehose-reliability.loggregator-elect.cf-app.com"
+          APP_NAME: "loggregator-firehose-reliability"
+          CF_API: "api.loggregator-elect.cf-app.com"
+          DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+          ORG: cf-lamb
+          SPACE: development
+          USERNAME: admin
+          CLIENT_ID: {{science-firehose-reliability-client-id}}
+          CLIENT_SECRET: {{science-firehose-reliability-client-secret}}
+          SKIP_CERT_VERIFY: true
 
 - name: start-incidents
   serial: true
