--- a/tasks/promote.yml
+++ b/tasks/promote.yml
@@ -1,7 +1,7 @@
 image_resource:
   type: docker-image
   source:
-    - repository: loggregator/base
+    repository: loggregator/base
 platform: linux
 inputs:
   - name: develop
