--- a/tasks/scalable-syslog-smoke-test-with-vars.yml
+++ b/tasks/scalable-syslog-smoke-test-with-vars.yml
@@ -2,7 +2,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-  - repository: loggregator/base
+    repository: loggregator/base
 inputs:
 - name: scalable-syslog-release
 - name: vars-store
