Make all image resource repositories maps
Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/pipelines/loggregator/bosh-hm-forwarder.yml
+++ b/pipelines/loggregator/bosh-hm-forwarder.yml
@@ -30,7 +30,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/base
+          repository: loggregator/base
       platform: linux
       inputs:
       - name: bosh-hm-forwarder-release
