--- a/pipelines/loggregator/datadog-firehose-nozzle.yml
+++ b/pipelines/loggregator/datadog-firehose-nozzle.yml
@@ -30,7 +30,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/base
+          repository: loggregator/base
       platform: linux
       inputs:
       - name: datadog-firehose-nozzle-release
@@ -73,7 +73,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/base
+          repository: loggregator/base
       platform: linux
       inputs:
       - name: datadog-firehose-nozzle-release
