--- a/pipelines/loggregator/go-loggregator.yml
+++ b/pipelines/loggregator/go-loggregator.yml
@@ -16,7 +16,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/base
+          repository: loggregator/base
       platform: linux
       inputs:
       - name: go-loggregator
