--- a/pipelines/loggregator/loggregator.yml
+++ b/pipelines/loggregator/loggregator.yml
@@ -108,7 +108,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/base
+          repository: loggregator/base
       inputs:
       - name: loggregator
       run:
@@ -142,7 +142,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/base
+          repository: loggregator/base
       inputs:
       - name: loggregator
       outputs:
@@ -287,7 +287,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/bosh10
+          repository: loggregator/bosh10
       inputs:
       - name: loggregator
       - name: cf-release
@@ -355,7 +355,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/bosh10
+          repository: loggregator/bosh10
       inputs:
       - name: deployments-loggregator
       params:
@@ -523,7 +523,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/base
+          repository: loggregator/base
       inputs:
       - name: cats
       - name: deployments-loggregator-with-changes
