--- a/pipelines/loggregator/scalable-syslog.yml
+++ b/pipelines/loggregator/scalable-syslog.yml
@@ -66,7 +66,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/base
+          repository: loggregator/base
       platform: linux
       inputs:
       - name: scalable-syslog-release
