--- a/pipelines/loggregator/statsd-injector.yml
+++ b/pipelines/loggregator/statsd-injector.yml
@@ -41,7 +41,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/base
+          repository: loggregator/base
       platform: linux
       inputs:
       - name: statsd-injector-release
