--- a/pipelines/loggregator/submodules.yml
+++ b/pipelines/loggregator/submodules.yml
@@ -45,7 +45,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/base
+          repository: loggregator/base
       platform: linux
       inputs:
       - name: dropsonde
@@ -62,7 +62,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/base
+          repository: loggregator/base
       inputs:
       - name: dropsonde
       - name: loggregator
@@ -98,7 +98,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          - repository: loggregator/base
+            repository: loggregator/base
       inputs:
         - name: noaa
       run:
@@ -228,7 +228,7 @@ jobs:
         image_resource:
           type: docker-image
           source:
-          - repository: loggregator/base
+            repository: loggregator/base
         platform: linux
         inputs:
         - name: dropsonde
@@ -243,7 +243,7 @@ jobs:
         image_resource:
           type: docker-image
           source:
-            - repository: loggregator/base
+              repository: loggregator/base
         inputs:
           - name: noaa
         run:
