Add skip cert verify param to firehose reliability test
Signed-off-by: Brady Love <blove@pivotal.io>

--- a/tasks/firehose-reliability-test.yml
+++ b/tasks/firehose-reliability-test.yml
@@ -6,5 +6,7 @@ image_resource:
 inputs:
 - name: loggregator
 - name: loggregator-ci
+params:
+  SKIP_CERT_VERIFY: false
 run:
   path: loggregator-ci/tasks/scripts/firehose-reliability-test.py
